--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
-h1{
-    color: red
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Arial', sans-serif; 
+}
+.navbar {
+    background: black;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+}
+.navbar-container{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    width: 100%;
+    max-width: 1300px;
 }
