--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     justify-content: flex-start;
     align-items: center;
 }
-.navbar_logo{
+#navbar_logo{
     font-size: 24px;
     color: green;
     text-align: left;
