--- a/templates/success.html
+++ b/templates/success.html
@@ -1,9 +1,15 @@
-<html>
-
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="stylesuccess.css">
+    </head>
 <body>
     <h1>{arg1}</h1>
     <p>{arg2}</p>
-    <a href="/">go back</a>
+    <div class="button">
+    <button onclick ="location.href='index.html'">Home</button>
+    </div>
 </body>
 
 </html>
