--- a/stylerecipes.css
+++ b/stylerecipes.css
@@ -34,3 +34,9 @@
     background-color: #f9f9f9;
     flex-wrap: wrap;
 }
+
+#title {
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 8px;
+}
