--- a/styleRecipeForm.css
+++ b/styleRecipeForm.css
@@ -4,11 +4,14 @@ html {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Tahoma, sans-serif;
     background: #9bb79b;
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     justify-content: center;
-    padding: 40px;
+    padding-top: 7%;
+    padding-left: 40%;
 }
 
 /* Form container */
@@ -23,7 +26,7 @@ body {
 /* Form heading */
 .recipe-form h2 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     color: #333;
 }
 
@@ -31,6 +34,7 @@ body {
 .recipe-form label {
     display: block;
     margin-top: 15px;
+    padding-top: 15px;
     font-weight: bold;
     color: #444;
     font-size: 20px; /* large font for labels */
@@ -70,6 +74,7 @@ body {
 /* Submit button */
 .recipe-form input[type="submit"] {
     margin-top: 20px;
+    padding-top: 15x;
     padding: 10px 20px;
     font-size: 36px;
     background-color: #6a5acd;
