--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h2{
 }
 .image_container img{
     border-radius: 15px;
-    border: 10px solid rgb(31, 176, 31)
+    border: 10px solid rgb(28, 97, 51);
 }
 ul {
     list-style-type: disc;
